@@ -111,51 +111,12 @@
     </dependencies>
 
     <!--TestFX configuration for headless and graphical tests-->
-    <properties>
-        <commonArgs>
-            --add-opens=javafx.graphics/com.sun.glass.ui=org.testfx.core
-            --add-opens=javafx.graphics/com.sun.javafx.application=org.testfx.core
-            --add-exports=javafx.graphics/com.sun.javafx.application=org.testfx.core
-            --add-exports=javafx.graphics/com.sun.glass.ui=org.testfx.monocle
-            --add-exports=javafx.graphics/com.sun.javafx.util=org.testfx.monocle
-            --add-exports=javafx.base/com.sun.javafx.logging=org.testfx.monocle
-        </commonArgs>
-    </properties>
     <profiles>
         <profile>
-            <id>headless-tests</id>
+            <id>unitTest</id>
             <activation>
                 <property>
-                    <name>headless</name>
-                    <value>true</value>
-                </property>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>
-                                -Dtestfx.headless=true
-                                -Djava.awt.headless=true
-                                ${commonArgs}
-                            </argLine>
-                            <useModulePath>true</useModulePath>
-                            <forkCount>1</forkCount>
-                            <reuseForks>false</reuseForks>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>graphical-tests</id>
-            <activation>
-                <property>
-                    <name>headless</name>
-                    <value>false</value>
+                    <name>!skipUnitTest</name>
                 </property>
             </activation>
             <build>
@@ -163,15 +124,29 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>
-                                -Dtestfx.headless=false
-                                ${commonArgs}
-                            </argLine>
-                            <useModulePath>true</useModulePath>
-                            <forkCount>1</forkCount>
-                            <reuseForks>false</reuseForks>
-                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>testfx-unit-tests</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <includes>
+                                        <include>**/*UTestFX.java</include>
+                                    </includes>
+                                    <argLine>
+                                        -Dtestfx.headless=true
+                                        ${commonTestFXArgs}
+                                    </argLine>
+                                </configuration>
+                            </execution>
+                            <!-- Disable the default execution -->
+                            <execution>
+                                <id>default-test</id>
+                                <phase>none</phase>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
